objects/Dealer_Project_Team__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Cell__c</fullName>
        <formula>Dealer_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Cell#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Dealer_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Dealer_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dealer Project Team member must be a contact in Salesforce to add them to a Project</inlineHelpText>
        <label>Dealer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Dealer_Project_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ILM_CRM_Access__c</fullName>
        <formula>IF( 
INCLUDES(  Dealer_Contact__r.ILM_CRM_Access__c  , &quot;Admin&quot;) , 
&quot;Admin&quot;, 
IF( 
INCLUDES(Dealer_Contact__r.ILM_CRM_Access__c, &quot;Manager&quot;) , 
&quot;Manager&quot;, 
IF( 
INCLUDES(Dealer_Contact__r.ILM_CRM_Access__c, &quot;Salesperson&quot;) , 
&quot;Salesperson&quot;, 
&quot;&quot; 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ILM/CRM Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POA_Notification_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>POA Notification Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership # Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavorial Targeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller/DMS Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM/CRM Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car Manager Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBX Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Contact</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipName>Dealer_Project_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Dealer Teams</relationshipLabel>
        <relationshipName>Dealer_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Dealer_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Dealer Team</label>
    <nameField>
        <displayFormat>DPT-{000000}</displayFormat>
        <label>Dealer Team #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Teams</pluralLabel>
    <recordTypes>
        <fullName>POA</fullName>
        <active>true</active>
        <description>used for Dealer Team members created related to a POA (Plan of Action)</description>
        <label>POA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <description>page layout used to relate a dealer team member to a project</description>
        <label>Project</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>